@@ -4,9 +4,11 @@ the bugtracking system of the GNOME project.
 
 Visit
  http://bugzilla.gnome.org/buglist.cgi?product=gtk-doc&bug_status=UNCONFIRMED&bug_status=NEW&bug_status=ASSIGNED&bug_status=REOPENED
-to see what is allready requested,
-or where you can help. :-)
+to see what is allready requested, or where you can help. :-)
 
 To put an other request on the TODO list, visit
  http://bugzilla.gnome.org/enter_bug.cgi?product=gtk-doc
 
+Also have a look at
+ http://live.gnome.org/DocumentationProject_2fGtkDocFuture
+and join discussion about future features.
