@@ -1,3 +1,11 @@
+2005-09-29  Stefan Kost  <ensonic@users.sf.net>
+
+	* TODO:
+          additionally point people to the gnome-wiki
+
+	* gtkdoc-mkdb.in:
+          don't warn on macros with return docs (#314267)
+
 2005-09-28 Matthias Clasen <mclasen@redhat.com>
 
 	Show signal flags:  (#316789)
